Deployment-API-Alertas-PRD.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sispae-api-alertas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sispae-api-alertas
  template:
    metadata:
      labels:
        app: sispae-api-alertas
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: sispae-api-alertas-prd
        image: azrcaksalimentosprd1.azurecr.io/sispae-api-alertas-prd:__Build.BuildId__
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: 200m
          requests:
            memory: 256Mi
            cpu: 100m                 
---
apiVersion: v1
kind: Service
metadata:
  name: sispae-api-alertas  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: sispae-api-alertas
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sispae-api-alertas-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/health-probe-port: "80"    
    appgw.ingress.kubernetes.io/health-probe-path: "/swagger/index.html"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/rewrite-rule-set: AccesoHTTPS
spec:
  tls:
    - secretName: secrettls
      hosts:
        - core.sipae.gov.co
  rules:
  - host: core.sipae.gov.co 
    http:
      paths:
      - path: /sispae-api-alertas/*
        pathType: Prefix
        backend:
          service:
            name: sispae-api-alertas
            port:
              number: 80
